# delegation-oracle

./: AGENTS.md  Cargo.toml  README.md  SPEC.md
src/: api.rs  config.rs  lib.rs  main.rs  scanners.rs  server.rs  types.rs
src/alert/: engine.rs  mod.rs  rules.rs  sink.rs
src/criteria/: differ.rs  fetcher.rs  mod.rs  schema.rs  store.rs
src/eligibility/: arbitrage.rs  evaluator.rs  history.rs  mod.rs  vulnerability.rs
src/metrics/: cache.rs  collector.rs  mod.rs  normalize.rs
src/optimizer/: conflicts.rs  mod.rs  recommendations.rs  whatif.rs
src/output/: csv.rs  json.rs  table.rs
src/programs/: blazestake.rs  http.rs  jito.rs  jpool.rs  marinade.rs  mod.rs  sanctum.rs  sfdp.rs
src/snapshot/: migrations.rs  store.rs
