[package]
name = "delegation-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
comfy-table = "7.1.4"
csv = "1.4.0"
dirs = "6.0.0"
once_cell = "1.21.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
similar = "2.7.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
